@@ -3,9 +3,6 @@ SET(PROJECT_VERSION_MINOR 1)
 SET(PROJECT_VERSION_PATCH 0)
 SET(PROJECT_VERSION ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}.${PROJECT_VERSION_PATCH})
 
-SET(DATA_DIR ${CMAKE_INSTALL_PREFIX}/share/${PROJECT_NAME}-${PROJECT_VERSION})
-ADD_DEFINITIONS(-DDATA_DIR="${DATA_DIR}")
-
 ADD_DEFINITIONS(-DWTF_PLATFORM_EFL=1)
 SET(WTF_PLATFORM_EFL 1)
 
@@ -45,6 +42,9 @@ SET(WTF_LIBRARY_NAME wtf_efl)
 SET(JavaScriptCore_LIBRARY_NAME javascriptcore_efl)
 SET(WebCore_LIBRARY_NAME webcore_efl)
 SET(WebKit_LIBRARY_NAME ewebkit)
+
+SET(DATA_DIR ${CMAKE_INSTALL_PREFIX}/share/${WebKit_LIBRARY_NAME}-${PROJECT_VERSION_MAJOR})
+ADD_DEFINITIONS(-DDATA_DIR="${DATA_DIR}")
 
 WEBKIT_FEATURE(ENABLE_AS_IMAGE "Enable SVG as image" DEFAULT ON SVG)
 WEBKIT_FEATURE(ENABLE_BLOB "Enable blob slice" DEFAULT OFF)
